# Tradeapp

./: CountryCodes.csv  README.md  chekc.py  functions.py  main.py  pyproject.toml
data/: HS_CODE.json
