[tool.poetry]
name = "uncomtrade"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
comtradeapicall = "^1.2.1"
seaborn = "^0.13.2"
streamlit = "^1.35.0"
numpy = "^1.26.4"
pandas = "^2.2.2"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
